--- a/festivos.html
+++ b/festivos.html
@@ -3,188 +3,303 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selector de Días Festivos</title>
+    <title>Calendario de Festivos 2024</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #f4f4f4;
             margin: 0;
-            background-color: #f0f0f0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .container {
-            background-color: white;
+            margin-top: 20px;
+            max-width: 1200px;
+            width: 100%;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        h1 {
+        h2 {
             text-align: center;
-        }
-        .selectors {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        select {
-            padding: 5px;
         }
         .calendar {
             display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .month {
+            border: 1px solid #ddd;
+            padding: 10px;
+        }
+        .month-header {
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .days {
+            display: grid;
             grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
+            gap: 2px;
         }
         .day {
             border: 1px solid #ddd;
-            padding: 10px;
+            padding: 5px;
             text-align: center;
-            cursor: pointer;
+            min-height: 30px;
         }
-        .day:hover {
-            background-color: #f0f0f0;
+        .day-header {
+            font-weight: bold;
+            background-color: #4CAF50;
+            color: white;
         }
-        .selected {
+        .festivo-nacional {
             background-color: #ffcccc;
         }
-        .controls {
-            margin-top: 20px;
-            text-align: center;
+        .festivo-madrid {
+            background-color: #ffffcc;
         }
-        button {
+        .festivo-manual {
+            background-color: #ffcccc;
+        }
+        .weekend {
+            background-color: #f0f0f0;
+        }
+        .motivo {
+            font-size: 10px;
+            color: #666;
+        }
+        .btn {
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .btn:hover {
+            background-color: #45a049;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #45a049;
+        nav {
+            margin-top: 20px;
+        }
+        nav a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #4CAF50;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Selector de Días Festivos</h1>
-        <div class="selectors">
-            <select id="month">
-                <option value="0">Enero</option>
-                <option value="1">Febrero</option>
-                <option value="2">Marzo</option>
-                <option value="3">Abril</option>
-                <option value="4">Mayo</option>
-                <option value="5">Junio</option>
-                <option value="6">Julio</option>
-                <option value="7">Agosto</option>
-                <option value="8">Septiembre</option>
-                <option value="9">Octubre</option>
-                <option value="10">Noviembre</option>
-                <option value="11">Diciembre</option>
-            </select>
-            <select id="year">
-                <!-- Se llenará con JavaScript -->
-            </select>
-        </div>
-        <div id="calendar" class="calendar">
-            <!-- Se llenará con JavaScript -->
-        </div>
-        <div class="controls">
-            <button onclick="guardarFestivos()">Guardar Festivos</button>
+        <h2>Calendario de Festivos 2024 - Nacional y Comunidad de Madrid</h2>
+        <button id="agregarFestivo" class="btn">Agregar Festivo</button>
+        <div id="calendario" class="calendar"></div>
+        <nav>
+            <a href="index.html">Volver al Inicio</a>
+        </nav>
+    </div>
+
+    <div id="modalFestivo" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Agregar Festivo</h3>
+            <select id="mesSelector"></select>
+            <div id="miniCalendario"></div>
+            <button id="confirmarFestivo" class="btn">Confirmar</button>
         </div>
     </div>
 
     <script>
-        const monthSelect = document.getElementById('month');
-        const yearSelect = document.getElementById('year');
-        const calendar = document.getElementById('calendar');
-        let selectedDays = new Set();
+        const diasSemana = ['Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb', 'Dom'];
+        const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
 
-        function initializeYearSelect() {
-            const currentYear = new Date().getFullYear();
-            for (let year = currentYear; year <= currentYear + 5; year++) {
-                const option = document.createElement('option');
-                option.value = year;
-                option.textContent = year;
-                yearSelect.appendChild(option);
-            }
-        }
+        const festivosNacionales = {
+            "2024-01-01": "Año Nuevo",
+            "2024-01-06": "Epifanía del Señor",
+            "2024-03-29": "Viernes Santo",
+            "2024-05-01": "Fiesta del Trabajo",
+            "2024-08-15": "Asunción de la Virgen",
+            "2024-10-12": "Fiesta Nacional de España",
+            "2024-11-01": "Todos los Santos",
+            "2024-12-06": "Día de la Constitución Española",
+            "2024-12-25": "Navidad"
+        };
 
-        function generateCalendar() {
-            const month = parseInt(monthSelect.value);
-            const year = parseInt(yearSelect.value);
-            const firstDay = new Date(year, month, 1);
-            const lastDay = new Date(year, month + 1, 0);
-            const daysInMonth = lastDay.getDate();
+        const festivosMadrid = {
+            "2024-01-01": "Año Nuevo",
+            "2024-01-06": "Epifanía del Señor",
+            "2024-03-28": "Jueves Santo",
+            "2024-03-29": "Viernes Santo",
+            "2024-05-01": "Fiesta del Trabajo",
+            "2024-05-02": "Fiesta de la Comunidad de Madrid",
+            "2024-05-15": "San Isidro",
+            "2024-08-15": "Asunción de la Virgen",
+            "2024-10-12": "Fiesta Nacional de España",
+            "2024-11-01": "Todos los Santos",
+            "2024-12-06": "Día de la Constitución Española",
+            "2024-12-25": "Navidad"
+        };
 
-            calendar.innerHTML = '';
+        let festivosManuales = {};
 
-            // Añadir encabezados de días
-            ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'].forEach(day => {
-                const dayHeader = document.createElement('div');
-                dayHeader.textContent = day;
-                dayHeader.style.fontWeight = 'bold';
-                calendar.appendChild(dayHeader);
-            });
+        function generarCalendario() {
+            const calendarioDiv = document.getElementById('calendario');
+            const anio = 2024;
 
-            // Añadir espacios en blanco para el primer día
-            for (let i = 0; i < firstDay.getDay(); i++) {
-                calendar.appendChild(document.createElement('div'));
-            }
+            for (let mes = 0; mes < 12; mes++) {
+                const monthDiv = document.createElement('div');
+                monthDiv.className = 'month';
+                monthDiv.innerHTML = `<div class="month-header">${meses[mes]} ${anio}</div>`;
 
-            // Añadir días del mes
-            for (let day = 1; day <= daysInMonth; day++) {
-                const dayElement = document.createElement('div');
-                dayElement.className = 'day';
-                dayElement.textContent = day;
-                dayElement.onclick = () => toggleDay(year, month, day, dayElement);
-                calendar.appendChild(dayElement);
-            }
-        }
+                const daysDiv = document.createElement('div');
+                daysDiv.className = 'days';
 
-        function toggleDay(year, month, day, element) {
-            const dateString = `${year}-${month+1}-${day}`;
-            if (selectedDays.has(dateString)) {
-                selectedDays.delete(dateString);
-                element.classList.remove('selected');
-            } else {
-                selectedDays.add(dateString);
-                element.classList.add('selected');
-            }
-        }
+                diasSemana.forEach(dia => {
+                    daysDiv.innerHTML += `<div class="day day-header">${dia}</div>`;
+                });
 
-        function guardarFestivos() {
-            localStorage.setItem('festivosSeleccionados', JSON.stringify([...selectedDays]));
-            alert('Días festivos guardados correctamente');
-        }
+                const primerDia = new Date(anio, mes, 1).getDay();
+                const diasEnMes = new Date(anio, mes + 1, 0).getDate();
 
-        function cargarFestivos() {
-            const festivos = JSON.parse(localStorage.getItem('festivosSeleccionados')) || [];
-            selectedDays = new Set(festivos);
-            updateCalendarSelection();
-        }
-
-        function updateCalendarSelection() {
-            const month = parseInt(monthSelect.value);
-            const year = parseInt(yearSelect.value);
-            document.querySelectorAll('.day').forEach(dayElement => {
-                const day = parseInt(dayElement.textContent);
-                const dateString = `${year}-${month+1}-${day}`;
-                if (selectedDays.has(dateString)) {
-                    dayElement.classList.add('selected');
-                } else {
-                    dayElement.classList.remove('selected');
+                for (let i = 0; i < (primerDia + 6) % 7; i++) {
+                    daysDiv.innerHTML += '<div class="day"></div>';
                 }
-            });
+
+                for (let dia = 1; dia <= diasEnMes; dia++) {
+                    const fecha = `${anio}-${(mes + 1).toString().padStart(2, '0')}-${dia.toString().padStart(2, '0')}`;
+                    const diaSemana = new Date(anio, mes, dia).getDay();
+                    let clase = '';
+                    let motivo = '';
+
+                    if (festivosNacionales[fecha]) {
+                        clase = 'festivo-nacional';
+                        motivo = festivosNacionales[fecha];
+                    } else if (festivosMadrid[fecha]) {
+                        clase = 'festivo-madrid';
+                        motivo = festivosMadrid[fecha];
+                    } else if (festivosManuales[fecha]) {
+                        clase = 'festivo-manual';
+                        motivo = 'Añadido';
+                    }
+
+                    if (diaSemana === 0 || diaSemana === 6) {
+                        clase += ' weekend';
+                    }
+
+                    let contenido = `
+                        <div>${dia}</div>
+                        ${motivo ? `<div class="motivo">${motivo}</div>` : ''}
+                    `;
+
+                    if (festivosManuales[fecha]) {
+                        contenido += `<button onclick="eliminarFestivo('${fecha}')">Eliminar</button>`;
+                    }
+
+                    daysDiv.innerHTML += `
+                        <div class="day ${clase}" data-fecha="${fecha}">
+                            ${contenido}
+                        </div>
+                    `;
+                }
+
+                monthDiv.appendChild(daysDiv);
+                calendarioDiv.appendChild(monthDiv);
+            }
         }
 
-        monthSelect.onchange = generateCalendar;
-        yearSelect.onchange = generateCalendar;
+        function agregarFestivo() {
+            const modal = document.getElementById('modalFestivo');
+            const mesSelector = document.getElementById('mesSelector');
+            const miniCalendario = document.getElementById('miniCalendario');
 
-        initializeYearSelect();
-        generateCalendar();
-        cargarFestivos();
+            mesSelector.innerHTML = '';
+            meses.forEach((mes, index) => {
+                mesSelector.innerHTML += `<option value="${index}">${mes}</option>`;
+            });
+
+            mesSelector.onchange = () => generarMiniCalendario(parseInt(mesSelector.value));
+
+            modal.style.display = 'block';
+            generarMiniCalendario(0);
+        }
+
+        function generarMiniCalendario(mes) {
+            const miniCalendario = document.getElementById('miniCalendario');
+            const anio = 2024;
+
+            miniCalendario.innerHTML = '';
+
+            diasSemana.forEach(dia => {
+                miniCalendario.innerHTML += `<div class="day day-header">${dia}</div>`;
+            });
+
+            const primerDia = new Date(anio, mes, 1).getDay();
+            const diasEnMes = new Date(anio, mes + 1, 0).getDate();
+
+            for (let i = 0; i < (primerDia + 6) % 7; i++) {
+                miniCalendario.innerHTML += '<div class="day"></div>';
+            }
+
+            for (let dia = 1; dia <= diasEnMes; dia++) {
+                const fecha = `${anio}-${(mes + 1).toString().padStart(2, '0')}-${dia.toString().padStart(2, '0')}`;
+                miniCalendario.innerHTML += `
+                    <div class="day" onclick="seleccionarFecha('${fecha}', this)">${dia}</div>
+                `;
+            }
+        }
+
+        function seleccionarFecha(fecha, elemento) {
+            document.querySelectorAll('#miniCalendario .day').forEach(el => el.classList.remove('selected'));
+            elemento.classList.add('selected');
+            document.getElementById('confirmarFestivo').onclick = () => confirmarFestivo(fecha);
+        }
+
+        function confirmarFestivo(fecha) {
+            festivosManuales[fecha] = true;
+            document.getElementById('modalFestivo').style.display = 'none';
+            generarCalendario();
+        }
+
+        function eliminarFestivo(fecha) {
+            delete festivosManuales[fecha];
+            generarCalendario();
+        }
+
+        window.onload = function() {
+            generarCalendario();
+            document.getElementById('agregarFestivo').onclick = agregarFestivo;
+            document.querySelector('.close').onclick = () => document.getElementById('modalFestivo').style.display = 'none';
+        };
     </script>
 </body>
 </html>
