--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
         .calendario .selected-yellow {
             background-color: #ffffcc;
         }
+        .calendario .festivo-nacional-madrid {
+            background-color: #ffa07a;
+        }
+        .calendario .festivo-manual {
+            background-color: #add8e6;
+        }
         .medico-list {
             margin-top: 20px;
         }
@@ -179,6 +185,14 @@
                 <div class="legend-color" style="background-color: #ffffcc;"></div>
                 <span>Preferencia de no trabajar</span>
             </div>
+            <div class="legend-item">
+                <div class="legend-color" style="background-color: #ffa07a;"></div>
+                <span>Festivo nacional/comunidad</span>
+            </div>
+            <div class="legend-item">
+                <div class="legend-color" style="background-color: #add8e6;"></div>
+                <span>Festivo añadido</span>
+            </div>
         </div>
 
         <!-- Botón para guardar los cambios -->
@@ -200,10 +214,14 @@
         const mesSelect = document.getElementById('mes');
         const anioSelect = document.getElementById('anio');
         let calendarioSeleccion = {};
+        let festivosNacionales = {};
+        let festivosMadrid = {};
+        let festivosManuales = {};
 
         window.onload = function() {
             cargarMedicos();
             cargarAnios();
+            cargarFestivos();
             generarCalendario();
         };
 
@@ -283,6 +301,12 @@
             anioSelect.value = anioActual;
         }
 
+        function cargarFestivos() {
+            festivosNacionales = JSON.parse(localStorage.getItem('festivosNacionales')) || {};
+            festivosMadrid = JSON.parse(localStorage.getItem('festivosMadrid')) || {};
+            festivosManuales = JSON.parse(localStorage.getItem('festivosManuales')) || {};
+        }
+
         function cargarCalendario() {
             const correoMedico = medicoSelect.value;
             if (correoMedico) {
@@ -315,9 +339,16 @@
                     calendarioHTML += '<div></div>';
                 } else {
                     const fecha = `${anio}-${(mes + 1).toString().padStart(2, '0')}-${diaActual.toString().padStart(2, '0')}`;
-                    const clase = calendarioSeleccion[fecha] === 'rojo' ? 'selected-red' : 
-                                  calendarioSeleccion[fecha] === 'amarillo' ? 'selected-yellow' : '';
+                    let clase = calendarioSeleccion[fecha] === 'rojo' ? 'selected-red' : 
+                                calendarioSeleccion[fecha] === 'amarillo' ? 'selected-yellow' : '';
                     const esFinDeSemana = i % 7 === 5 || i % 7 === 6 ? 'weekend' : '';
+
+                    if (festivosNacionales[fecha] || festivosMadrid[fecha]) {
+                        clase += ' festivo-nacional-madrid';
+                    } else if (festivosManuales[fecha]) {
+                        clase += ' festivo-manual';
+                    }
+
                     calendarioHTML += `<div class="day ${esFinDeSemana} ${clase}" onclick="seleccionarDia(this, '${fecha}')">${diaActual}</div>`;
                     diaActual++;
                 }
@@ -327,6 +358,11 @@
         }
 
         function seleccionarDia(elemento, fecha) {
+            if (festivosNacionales[fecha] || festivosMadrid[fecha] || festivosManuales[fecha]) {
+                // No permitir selección en días festivos
+                return;
+            }
+
             if (elemento.classList.contains('selected-red')) {
                 elemento.classList.remove('selected-red');
                 elemento.classList.add('selected-yellow');
