--- a/index.html
+++ b/index.html
@@ -5,206 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario Interactivo - Selección de Disponibilidad</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            margin-top: 20px;
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .btn {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-        .calendario {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-        .calendario div {
-            padding: 10px;
-            text-align: center;
-            border: 1px solid #ddd;
-            cursor: pointer;
-        }
-        .calendario .header {
-            background-color: #4CAF50;
-            color: white;
-            font-weight: bold;
-        }
-        .calendario .weekend {
-            background-color: #f0f0f0;
-        }
-        .calendario .selected-red {
-            background-color: #ffcccc;
-        }
-        .calendario .selected-yellow {
-            background-color: #ffffcc;
-        }
-        .calendario .festivo-nacional-madrid {
-            background-color: #ffa07a;
-        }
-        .calendario .festivo-manual {
-            background-color: #add8e6;
-        }
-        .medico-list {
-            margin-top: 20px;
-        }
-        .medico-item {
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: space-between;
-        }
-        .delete-btn {
-            background-color: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 5px 10px;
-        }
-        nav {
-            margin-top: 20px;
-        }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #4CAF50;
-        }
-        .legend {
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-        }
-        .legend-item {
-            display: flex;
-            align-items: center;
-        }
-        .legend-color {
-            width: 20px;
-            height: 20px;
-            margin-right: 5px;
-        }
+        /* ... (mantener los estilos existentes) ... */
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Calendario Interactivo - Selección de Disponibilidad</h2>
-        
-        <!-- Formulario de registro de médicos -->
-        <div class="form-group">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" placeholder="Nombre del médico">
-        </div>
-        <div class="form-group">
-            <label for="apellidos">Apellidos</label>
-            <input type="text" id="apellidos" placeholder="Apellidos del médico">
-        </div>
-        <div class="form-group">
-            <label for="correo">Correo electrónico</label>
-            <input type="email" id="correo" placeholder="Correo del médico">
-        </div>
-        <button class="btn" onclick="agregarMedico()">Aceptar médico</button>
-
-        <!-- Lista de médicos -->
-        <div class="medico-list" id="medicoList"></div>
-
-        <!-- Selección de médico y fecha para el calendario -->
-        <div class="form-group">
-            <label for="medico">Seleccionar Médico:</label>
-            <select id="medico" onchange="cargarCalendario()"></select>
-        </div>
-        <div class="form-group">
-            <label for="mes">Mes:</label>
-            <select id="mes" onchange="generarCalendario()">
-                <option value="0">Enero</option>
-                <option value="1">Febrero</option>
-                <option value="2">Marzo</option>
-                <option value="3">Abril</option>
-                <option value="4">Mayo</option>
-                <option value="5">Junio</option>
-                <option value="6">Julio</option>
-                <option value="7">Agosto</option>
-                <option value="8">Septiembre</option>
-                <option value="9">Octubre</option>
-                <option value="10">Noviembre</option>
-                <option value="11">Diciembre</option>
-            </select>
-
-            <label for="anio">Año:</label>
-            <select id="anio" onchange="generarCalendario()"></select>
-        </div>
-
-        <!-- Calendario -->
-        <div class="calendario" id="calendario"></div>
-
-        <!-- Leyenda -->
-        <div class="legend">
-            <div class="legend-item">
-                <div class="legend-color" style="background-color: #ffcccc;"></div>
-                <span>No disponible</span>
-            </div>
-            <div class="legend-item">
-                <div class="legend-color" style="background-color: #ffffcc;"></div>
-                <span>Preferencia de no trabajar</span>
-            </div>
-            <div class="legend-item">
-                <div class="legend-color" style="background-color: #ffa07a;"></div>
-                <span>Festivo nacional/comunidad</span>
-            </div>
-            <div class="legend-item">
-                <div class="legend-color" style="background-color: #add8e6;"></div>
-                <span>Festivo añadido</span>
-            </div>
-        </div>
-
-        <!-- Botón para guardar los cambios -->
-        <button class="btn" onclick="guardarCambios()">Guardar cambios</button>
-
-        <nav>
-            <a href="index.html">Volver al Inicio</a>
-            <a href="subespecialidades.html">Subespecialidades</a>
-            <a href="consultas.html">Crear Consultas</a>
-            <a href="calendario-consultas.html">Calendario de Consultas</a>
-            <a href="festivos.html">Calendario de Festivos</a>
-        </nav>
+        <!-- ... (mantener el contenido HTML existente) ... -->
     </div>
 
     <script>
@@ -226,79 +32,27 @@
         };
 
         function agregarMedico() {
-            const nombre = document.getElementById('nombre').value;
-            const apellidos = document.getElementById('apellidos').value;
-            const correo = document.getElementById('correo').value;
-
-            if (nombre && apellidos && correo) {
-                const medico = { nombre, apellidos, correo };
-                
-                let medicos = JSON.parse(localStorage.getItem('medicos')) || [];
-                medicos.push(medico);
-                localStorage.setItem('medicos', JSON.stringify(medicos));
-
-                let subespecialidadesMedicos = JSON.parse(localStorage.getItem('subespecialidadesMedicos')) || {};
-                subespecialidadesMedicos[correo] = ["Pediatría General"];
-                localStorage.setItem('subespecialidadesMedicos', JSON.stringify(subespecialidadesMedicos));
-
-                mostrarMedico(medico);
-                actualizarSelectMedicos();
-
-                document.getElementById('nombre').value = '';
-                document.getElementById('apellidos').value = '';
-                document.getElementById('correo').value = '';
-            } else {
-                alert('Por favor, rellena todos los campos.');
-            }
+            // ... (mantener la función existente) ...
         }
 
         function mostrarMedico(medico) {
-            const medicoItem = document.createElement('div');
-            medicoItem.classList.add('medico-item');
-            medicoItem.innerHTML = `
-                <span>${medico.nombre} ${medico.apellidos} - ${medico.correo}</span>
-                <button class="delete-btn" onclick="eliminarMedico('${medico.correo}')">Eliminar</button>
-            `;
-            medicoList.appendChild(medicoItem);
+            // ... (mantener la función existente) ...
         }
 
         function cargarMedicos() {
-            let medicos = JSON.parse(localStorage.getItem('medicos')) || [];
-            medicoList.innerHTML = '';
-            medicos.forEach(medico => {
-                mostrarMedico(medico);
-            });
-            actualizarSelectMedicos();
+            // ... (mantener la función existente) ...
         }
 
         function actualizarSelectMedicos() {
-            let medicos = JSON.parse(localStorage.getItem('medicos')) || [];
-            medicoSelect.innerHTML = '<option value="">Seleccione un médico</option>';
-            medicos.forEach(medico => {
-                const option = document.createElement('option');
-                option.value = medico.correo;
-                option.textContent = `${medico.nombre} ${medico.apellidos}`;
-                medicoSelect.appendChild(option);
-            });
+            // ... (mantener la función existente) ...
         }
 
         function eliminarMedico(correo) {
-            let medicos = JSON.parse(localStorage.getItem('medicos')) || [];
-            medicos = medicos.filter(m => m.correo !== correo);
-            localStorage.setItem('medicos', JSON.stringify(medicos));
-
-            cargarMedicos();
+            // ... (mantener la función existente) ...
         }
 
         function cargarAnios() {
-            const anioActual = new Date().getFullYear();
-            for (let i = anioActual - 2; i <= anioActual + 2; i++) {
-                const option = document.createElement('option');
-                option.value = i;
-                option.textContent = i;
-                anioSelect.appendChild(option);
-            }
-            anioSelect.value = anioActual;
+            // ... (mantener la función existente) ...
         }
 
         function cargarFestivos() {
@@ -349,7 +103,14 @@
                         clase += ' festivo-manual';
                     }
 
-                    calendarioHTML += `<div class="day ${esFinDeSemana} ${clase}" onclick="seleccionarDia(this, '${fecha}')">${diaActual}</div>`;
+                    let contenido = diaActual;
+                    if (festivosNacionales[fecha] || festivosMadrid[fecha]) {
+                        contenido += '<br><small>Festivo</small>';
+                    } else if (festivosManuales[fecha]) {
+                        contenido += '<br><small>Añadido</small>';
+                    }
+
+                    calendarioHTML += `<div class="day ${esFinDeSemana} ${clase}" onclick="seleccionarDia(this, '${fecha}')">${contenido}</div>`;
                     diaActual++;
                 }
             }
